Datanucleus is disqualified due to constant errors with enhancing product during benchmarks